[package]
name = "bip300301"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
bitcoin = { version = "0.31.1", features = ["serde"] }
hex = { version = "0.4.3", features = ["serde"] }
hex-conservative = "0.1.1"
http = "1.1.0"
jsonrpsee = { version = "0.23.2", features = ["client", "macros"] }
monostate = "0.1.13"
serde = { version = "1.0.183", features = ["alloc", "derive"] }
serde_json = "1.0.104"
serde_with = "3.8.1"
thiserror = "1.0.44"
tokio = { version = "1.35.1", default-features = false, features = ["time"]}
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
serde_path_to_error = "0.1.16"

[features]
tracing = ["jsonrpsee/tracing", "dep:tracing"]