[package]
name = "bip300301"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bitcoin = { version = "0.32.2", features = ["serde"] }
hashlink = { version = "0.10.0", features = ["serde_impl"] }
hex = { version = "0.4.3", features = ["serde"] }
hex-conservative = "0.3.0"
http = "1.1.0"
jsonrpsee = { version = "0.24.7", features = ["client", "macros"] }
monostate = "0.1.13"
serde = { version = "1.0.183", features = ["alloc", "derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.35.1", default-features = false, features = ["time"]}
tracing = { version = "0.1.40", optional = true }

[dependencies.educe]
version = "0.6.0"
default-features = false
features = ["Clone", "Debug"]

[dependencies.serde_with]
version = "3.8.1"
default-features = false
features = ["hex", "macros"]

[dev-dependencies]
serde_path_to_error = "0.1.16"

[features]
tracing = ["jsonrpsee/tracing", "dep:tracing"]
